--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,12 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/jimSpec.js"></script>
+  <script src="spec/dwightSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/jim.js"></script>
+  <script src="src/dwight.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
