--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/jim.js"></script>
+    <script src="src/dwight.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <span class="title">Object Dance Party</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Add a Blinky Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDwightDancer">Add a Dwight Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJimDancer">Add a Jim Dancer</a>
+      <a href="#" class="danceLineUp" data-dancer-maker-function-name="LineUpDancers">Line Up Dancers</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
