Commit all work up until noon on day 2

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,14 +8,27 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/jim.js"></script>
     <script src="src/dwight.js"></script>
+    <script src="src/angela.js"></script>
+    <script src="src/kelly.js"></script>
+    <script src="src/michael.js"></script>
+    <script src="src/darryl.js"></script>
+    <script src="src/pam.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">Object Dance Party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Add a Blinky Dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDwightDancer">Add a Dwight Dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJimDancer">Add a Jim Dancer</a>
-      <a href="#" class="danceLineUp" data-dancer-maker-function-name="LineUpDancers">Line Up Dancers</a>    </div>
+      <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Add a Blinky Dancer</a> -->
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDwightDancer">Dwight</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJimDancer">Jim</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makePamDancer">Pam</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDarrylDancer">Darryl</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeAngelaDancer">Angela</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKellyDancer">Kelly</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMichaelDancer">Michael</a>
+      <a href="#" class="danceLineUp" data-dancer-maker-function-name="LineUpDancers">Line Up Dancers</a>
+      <a href="#" class="danceLineUpVertical" data-dancer-maker-function-name="VerticalLineUp">Vertical Line Up</a>
+      <a href="#" class="returnDancerButton" data-dancer-maker-function-name="returnDancerButton">Scatter</a>
+      <a href="#" class="moveFunny" data-dancer-maker-function-name="funnyDancers">Funny Dancers</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
