change some names

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -26,7 +26,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKellyDancer">Kelly</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMichaelDancer">Michael</a>
       <a href="#" class="danceLineUp" data-dancer-maker-function-name="LineUpDancers">Line Up Dancers</a>
-      <a href="#" class="danceLineUpVertical" data-dancer-maker-function-name="VerticalLineUp">Vertical Line Up</a>
+      <a href="#" class="danceLineUpDiagonal" data-dancer-maker-function-name="DiagonalLineUp">Diagonal Line Up</a>
       <a href="#" class="returnDancerButton" data-dancer-maker-function-name="returnDancerButton">Scatter</a>
       <a href="#" class="moveFunny" data-dancer-maker-function-name="funnyDancers">Funny Dancers</a>    </div>
     <script src="src/init.js"></script>
