--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,6 +14,7 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
+  <script src="spec/dancerSpec.js"></script>
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="spec/jimSpec.js"></script>
   <script src="spec/dwightSpec.js"></script>
