--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <title>Office Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">Object Dance Party</span>
+      <span class="title">Office Dance Party</span>
       <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">Add a Blinky Dancer</a> -->
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDwightDancer">Dwight</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeJimDancer">Jim</a>
